Added config repo

--- a/config-server/src/main/resources/bootstrap.properties
+++ b/config-server/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=weather-service
+spring.application.name=config-service
 spring.cloud.vault.token=myroot
 spring.cloud.vault.scheme=http
 spring.cloud.vault.uri=http://localhost:8200
